# opencv_test

./: CMakeLists.txt  README.md
include/: common.h  parse_para.hpp
src/: CMakeLists.txt  draw_circle.cpp  sift.cpp
